# MLandNN

./: README.md  main.py  pyproject.toml  requirements.txt
ML/SupervisedLearning/: gradientdescent.ipynb  linearreg.ipynb  logisticregression.ipynb
