[project]
name = "mlandnn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asttokens==3.0.1",
    "certifi==2026.4.22",
    "charset-normalizer==3.4.7",
    "colorama==0.4.6",
    "comm==0.2.3",
    "contourpy==1.3.3",
    "coverage==7.13.5",
    "cycler==0.12.1",
    "debugpy==1.8.20",
    "decorator==5.2.1",
    "executing==2.2.1",
    "fonttools==4.62.1",
    "idna==3.13",
    "iniconfig==2.3.0",
    "ipykernel==7.2.0",
    "ipython==9.13.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jupyter-client==8.8.0",
    "jupyter-core==5.9.1",
    "kiwisolver==1.5.0",
    "matplotlib==3.10.9",
    "matplotlib-inline==0.2.1",
    "nest-asyncio==1.6.0",
    "numpy==2.4.4",
    "packaging==26.2",
    "parso==0.8.6",
    "peewee==3.19.0",
    "pillow==12.2.0",
    "platformdirs==4.9.6",
    "pluggy==1.6.0",
    "prompt-toolkit==3.0.52",
    "psutil==7.2.2",
    "pure-eval==0.2.3",
    "pygments==2.20.0",
    "pyparsing==3.3.2",
    "pytest==9.0.3",
    "pytest-cov==2.12.1",
    "python-dateutil==2.9.0.post0",
    "pyzmq==27.1.0",
    "rand==0.3.0",
    "requests==2.33.1",
    "six==1.17.0",
    "stack-data==0.6.3",
    "toml==0.10.2",
    "tornado==6.5.5",
    "traitlets==5.14.3",
    "urllib3==2.6.3",
    "wcwidth==0.6.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
]
